# dagster-test

./: README.md  config.json  pyproject.toml  scraper.py
output/: allinone-popup-links.csv  allinone.csv  computers.csv  laptops.csv  phones.csv  tablets.csv  touch.csv
