[tool.poetry]
name = "dagster-test"
version = "0.1.0"
description = ""
authors = ["Rostyslav Popadyn <rostykpopadynrostykpopadyn451@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
